<resources>
    <string name="app_name">Cinetix</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="cast_member">Cast Member</string>
    <string name="home">Home</string>
    <string name="ticket">Ticket</string>
    <string name="movie">Movie</string>
    <string name="profile">Profile</string>
    <string name="email_icon">Email Icon</string>
    <string name="show_password">Show Password</string>

    <string name="cacc">Create Your Account</string>
    <string name="uname">User Name</string>
    <string name="email">E-mail</string>
    <string name="password">Password</string>
    <string name="conpass">Confirm password</string>
    <string name="haveacc">"Already have an Account, "</string>
    <string name="sinin">Sign In</string>
    <string name="nows">Now Showing</string>
    <string name="dunename">Dune Part II</string>
    <string name="dunetime">2h 45m</string>
    <string name="dunerate">Rating: 8.5</string>
    <string name="capname">Captain America: BNW</string>
    <string name="captime">2h 00m</string>
    <string name="caprate">Rating: 5.9</string>
    <string name="swname">Snow White</string>
    <string name="swtime">1h 49m</string>
    <string name="swrate">Rating: 1.7</string>
    <string name="comsoon">Coming Soon</string>
    <string name="mcname">A MineCraft Movie</string>
    <string name="mcdate">04 April 2025</string>
    <string name="mcgenre">Action | Animation | Comedy</string>
    <string name="miname">MI : Final Reckoning</string>
    <string name="midate">23 May 2025</string>
    <string name="migenre">Action | Adventure | Thriller</string>
    <string name="challcom">Cinetix Hall Colombo</string>
    <string name="challnug">Cinetix Hall Nugegoda</string>
    <string name="challgam">Cinetix Hall Gampaha</string>
    <string name="dunegenre">Action         |    Adventure    |    Sci-Fi</string>
    <string name="feb">FEB</string>
    <string name="remaintime">Remaining Time   05:00</string>
    <string name="cont">CONTINUE</string>
    <string name="cancelb">Cancel Booking</string>
    <string name="usname">User Name</string>
    <string name="confirm">Confirm</string>
    <string name="WeavingStories">Weaving Stories</string>
    <string name="book">Book Your Seat, Enjoy the Magic!</string>
    <string name="duneplot">Paul Atreides unites with the Fremen while on a warpath of revenge against the conspirators who destroyed his family. Facing a choice between the love of his life and the f..</string>
    <string name="capgenre">Action | Superhero</string>
    <string name="swgenre">Adventure | Drama | Musical</string>
    <string name="luka">Luka</string>
    <string name="uemail">luqmanbooso@gmail.com</string>
    <string name="edp">Edit Profile</string>
    <string name="ap">Account Settings</string>
    <string name="cp">Change Password</string>
    <string name="pp">Privacy Policy</string>
    <string name="totalamount">Total Rs. 3500.00</string>
    <string name="fpass">Forgot Password?</string>
    <string name="dunetikettime">March 28, 2023 • 7:30 PM • Hall 2</string>
    <string name="vtik">View Ticket</string>
    <string name="rvw">Review</string>
    <string name="privacyp">Privacy Policy</string>
    <string name="pp1">This Privacy Policy describes how we collect, use, and disclose your information when you use our movie ticket booking application.</string>
    <string name="pp2">We collect information you provide directly to us, such as when you create an account, make a booking, or contact customer support. This may include your name, email address, phone number, and payment information.</string>
    <string name="pp3">We use the information we collect to provide, maintain, and improve our services, process transactions, communicate with you about your bookings, and send you promotional content if you opt-in.</string>
    <string name="pp4">We may share your information with theaters to facilitate your booking, payment processors to complete transactions, and service providers who perform services on our behalf.</string>
    <string name="em" />
    <string name="emcode">Enter verification code</string>
    <string name="cinetix">CineTix</string>
    <string name="tikid">TICKET ID: XW3Z57CW</string>
    <string name="movies">MOVIE</string>
    <string name="dt"><![CDATA[DATE &amp; TIME]]></string>
    <string name="dunedttm">12:00 21.03.2025</string>
    <string name="seats">SEATS</string>
    <string name="duneseats">H14, H15</string>
    <string name="tikprice">PRICE</string>
    <string name="tikprices">Rs. 5000</string>
    <string name="venue">VENUE</string>
    <string name="scan">SCAN FOR ENTRY</string>
    <string-array name="sorting_options">
        <item>Popularity</item>
        <item>Release Date</item>
        <item>Rating</item>
        <item>Alphabetical</item>
    </string-array>
</resources>