<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:background="@color/black"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Comingsoon">

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="67dp"
        android:background="@drawable/bottom_nav_background"
        android:orientation="horizontal"
        android:padding="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/homeIcon"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/home"
                android:tint="@android:color/white" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Home"
                android:textColor="@android:color/white"
                android:textSize="12sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/ticketIcon"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/ticket"
                android:tint="@android:color/white" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Ticket"
                android:textColor="@android:color/white"
                android:textSize="12sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/movieIcon"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/film"
                android:tint="@android:color/holo_orange_dark" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Movie"
                android:textColor="@android:color/holo_orange_dark"
                android:textSize="12sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/profileIcon"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/user"
                android:tint="@color/white" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Profile"
                android:textColor="@color/white"
                android:textSize="12sp" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/buttonLayout"
        android:layout_width="385dp"
        android:layout_height="55dp"
        android:layout_marginStart="8dp"
        android:background="@drawable/gradient_background"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.023">

        <Button
            android:id="@+id/nowShowingBtn"
            android:layout_width="177dp"
            android:layout_height="55dp"
            android:layout_margin="5dp"
            android:textColor="@color/white"
            android:layout_weight="1"
            android:backgroundTint="#00D87F1E"
            android:text="Now Showing"
            app:cornerRadius="5dp" />

        <Button
            android:id="@+id/comingSoonBtn"
            android:layout_width="200dp"
            android:layout_height="55dp"
            android:layout_marginStart="2dp"
            android:backgroundTint="@color/black"
            android:text="Coming Soon"
            android:textColor="@color/white"
            android:translationX="-5dp"
            app:cornerRadius="100dp" />
    </LinearLayout>

    <ScrollView
        android:layout_width="417dp"
        android:layout_height="545dp"
        android:layout_marginTop="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.515"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonLayout">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:id="@+id/movieCard1"
                android:layout_width="400dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10sp"
                android:layout_marginBottom="10sp"
                app:cardBackgroundColor="#66A2A3A7"
                app:cardCornerRadius="10sp"
                app:cardElevation="4sp"
                app:cardMaxElevation="10sp"
                app:cardUseCompatPadding="true">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="12dp">

                    <ImageView
                        android:id="@+id/moviePoster1"
                        android:layout_width="110dp"
                        android:layout_height="180dp"
                        android:scaleType="centerCrop"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:srcCompat="@drawable/mine" /> <!-- Avatar poster -->

                    <TextView
                        android:id="@+id/movieTitle1"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:fontFamily="@font/kanit_italic"
                        android:text="@string/mcname"
                        android:textColor="@color/white"
                        android:textSize="20sp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@+id/moviePoster1"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/movieGenre1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="4dp"
                        android:text="@string/mcgenre"
                        android:textColor="@color/white"
                        app:layout_constraintStart_toStartOf="@+id/movieTitle1"
                        app:layout_constraintTop_toBottomOf="@+id/movieTitle1" />

                    <TextView
                        android:id="@+id/releaseDateView1"
                        android:layout_width="218dp"
                        android:layout_height="17dp"
                        android:layout_marginStart="19dp"
                        android:contentDescription="Release Date"
                        android:text="@string/mcdate"
                        android:textColor="@color/white"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toEndOf="@+id/moviePoster1"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/comingSoonTextView1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="48dp"
                        android:text="Coming Soon"
                        android:textColor="@color/orange"
                        android:textSize="16sp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.496"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/releaseDateView1" />
                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/movieCard2"
                android:layout_width="400dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10sp"
                android:layout_marginBottom="10sp"
                app:cardBackgroundColor="#66A2A3A7"
                app:cardCornerRadius="10sp"
                app:cardElevation="4sp"
                app:cardMaxElevation="10sp"
                app:cardUseCompatPadding="true">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="12dp">

                    <ImageView
                        android:id="@+id/moviePoster2"
                        android:layout_width="110dp"
                        android:layout_height="180dp"
                        android:scaleType="centerCrop"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:srcCompat="@drawable/mi" /> <!-- Black Panther poster -->

                    <TextView
                        android:id="@+id/movieTitle2"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:fontFamily="@font/kanit_italic"
                        android:text="@string/miname"
                        android:textColor="@color/white"
                        android:textSize="20sp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@+id/moviePoster2"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/movieGenre2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="4dp"
                        android:text="@string/migenre"
                        android:textColor="@color/white"
                        app:layout_constraintStart_toStartOf="@+id/movieTitle2"
                        app:layout_constraintTop_toBottomOf="@+id/movieTitle2" />

                    <TextView
                        android:id="@+id/releaseDateView2"
                        android:layout_width="218dp"
                        android:layout_height="17dp"
                        android:layout_marginStart="20dp"
                        android:layout_marginTop="28dp"
                        android:contentDescription="Release Date"
                        android:text="@string/midate"
                        android:textColor="@color/white"
                        app:layout_constraintStart_toEndOf="@+id/moviePoster2"
                        app:layout_constraintTop_toBottomOf="@+id/movieGenre2" />

                    <TextView
                        android:id="@+id/comingSoonTextView2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="44dp"
                        android:text="Coming Soon"
                        android:textColor="@color/orange"
                        android:textSize="16sp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.496"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/releaseDateView2" />
                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.cardview.widget.CardView>


        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>
